Projeto pronto para envio

--- a/notebooks/01_GG_analise_projeto.ipynb
+++ b/notebooks/01_GG_analise_projeto.ipynb
@@ -147,8 +147,6 @@
     "\n",
     "from src.config import DADOS_ORIGINAIS\n",
     "\n",
-    "Projeto Engajamento Instagram/notebooks/01_GG_analise_projeto.ipynb\n",
-    "\n",
     "df_insta = pd.read_excel(DADOS_ORIGINAIS)\n",
     "\n",
     "df_insta.head()"
@@ -460,6 +458,13 @@
    ],
    "source": [
     "df_insta.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A fazer: Analisar por que a coluna \"carrossel\" possui apenas 8 valores não nulos."
    ]
   },
   {
@@ -781,6 +786,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A fazer: Assumir que os valores nulos na coluna \"carrossel\" representam \"N\", já que todos os valores não nulos são \"S\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -867,6 +879,13 @@
    ],
    "source": [
     "df_insta[\"Tipo\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A fazer: Utilizar a função describe() para analisar as estatísticas das colunas numéricas."
    ]
   },
   {
@@ -1233,9 +1252,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As 5 postagens com maior número de curtidas tinham pessoas e eram campanhas, enquanto as 5 postagens com menor número de curtidas não tinham pessoas e nem eram campanhas.\n",
+    "As 5 postagens com maior número de curtidas continham pessoas e faziam parte de campanhas, enquanto as 5 postagens com menor número de curtidas não incluíam pessoas nem estavam relacionadas a campanhas.\n",
     "\n",
-    "É possível analisar que as curtidas estão relacionadas a presença de pessoas nas fotos e as campanhas"
+    "Isso evidencia que as curtidas estão diretamente relacionadas à presença de pessoas nas fotos e à realização de campanhas."
    ]
   },
   {
@@ -1245,6 +1264,13 @@
    "outputs": [],
    "source": [
     "pd.options.display.float_format = \"{:,.2f}\".format"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A fazer: Utilizar a função describe() para calcular médias e relacionar colunas, a fim de identificar os elementos mais presentes nas publicações que geraram maior engajamento."
    ]
   },
   {
@@ -1354,7 +1380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pode se inferir que vale a pena investir em postagens do tipo reels e fotos"
+    "Os dados indicam que vale a pena investir em postagens do tipo reels e fotos."
    ]
   },
   {
@@ -1427,7 +1453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pode se inferir que postagens com pessoas engaja mais"
+    "Também foi observado que postagens com pessoas geram maior engajamento."
    ]
   },
   {
@@ -1539,7 +1565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nesse caso, vídeos com pessoas também engajam muito"
+    "Vídeos com pessoas também mostraram um alto nível de engajamento."
    ]
   },
   {
@@ -1685,9 +1711,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fica entendido que as postagens do tipo reels e fotos são as melhores para engajar, principalmente ao incluir pessoas.\n",
+    "Conclui-se que reels e fotos são os formatos mais eficazes para engajar, especialmente quando incluem pessoas.\n",
     "\n",
-    "Vídeos performaram bem nos casos de serem campanhas com pessoas, ao ponto de terem mais comentários que as fotos."
+    "Vídeos apresentaram um desempenho destacado quando associados a campanhas com pessoas, chegando a gerar mais comentários do que as fotos."
    ]
   },
   {
@@ -1721,6 +1747,13 @@
    ],
    "source": [
     "df_insta.groupby(\"Tags\")[\"Curtidas\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A fazer: Separar as postagens que possuem duas ou mais tags em linhas diferentes para facilitar a análise."
    ]
   },
   {
@@ -2158,7 +2191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos observar que as postagens de promoções são as que possuem mais engajamento, seguido por datas comemorativas e trends."
+    "As postagens relacionadas a promoções são as que apresentam maior engajamento, seguidas pelas associadas a datas comemorativas e conteúdos em alta (trends)."
    ]
   },
   {
